Implemented all requested changes